[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
sqlalchemy = "^2.0.49"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.1"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==3.2.2"
python-multipart = "^0.0.26"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
mypy = "^1.20.1"
types-python-jose = "^3.5.0.20260402"
types-passlib = "^1.7.7.20260211"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"